エラーページメンテ

--- a/JOTWEB/OIL/ex/page_err_default.html
+++ b/JOTWEB/OIL/ex/page_err_default.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
@@ -7,21 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Poraris JOT Oil Transportation OrderSystem </title>
+    <title>JOT Oil Transportation OrderSystem </title>
 
     <!-- Bootstrap -->
     <link href="../css/ex/bootstrap.min.css" rel="stylesheet">
     <!-- Custom Theme Style -->
     <link href="../css/ex/custom.min.css" rel="stylesheet">
 
-    <%-- Global site tag (gtag.js) - Google Analytics --%>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162169937-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-162169937-1');
-    </script>
+
 </head>
 
     <body class="nav-md">
@@ -31,10 +24,12 @@
                 <div class="col-md-12">
                     <div class="col-middle">
                         <div class="text-center text-center">
-                            <h1 class="error-number">404 Not Found</h1>
-                            <h2>該当するページは見つかりませんでした。</h2>
+                         <!--   <h1 class="error-number">システム障害</h1>  -->
+                            <h2>石油システムで障害が発生しました。</h2>
                             <p>
-                                <a href="https://jotoilsystem.jp/jotweb/">移動または削除された可能性があります。 ごめんにゃ</a>
+                                <span>ご迷惑おかけしております。JOT石油部までご連絡ください。</span>
+                                <br />
+                                <span><a href="https://jotoilsystem.jp/jotweb/">Porarisログイン画面へ戻る</a></span>
                             </p>
                             <div class="mid_center">
                                 <br>
