--- a/JOTWEB/OIL/ex/page_404.html
+++ b/JOTWEB/OIL/ex/page_404.html
@@ -14,7 +14,7 @@
     <!-- Custom Theme Style -->
     <link href="../css/ex/custom.min.css" rel="stylesheet">
 
-    <%-- Global site tag (gtag.js) - Google Analytics --%>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162169937-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
